Curve Modifier skipped in Cycles #63217

Closed
opened 2019-04-02 14:12:31 +02:00 by Paul McManus · 6 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-01 19:15, hash: 17c15798c3
Worked: (optional)

Short description of error
Curve Modifier skipped in Cycles

Exact steps for others to reproduce the error

  1. New empty scene
  2. Add a Bezier circle and a text object.
  3. Add Curve Modifier to text and set the object to the Bezier Circle
  4. Viewport wireframe, solid and look all OK, viewport render and final render show the text in original location and not on the curve.

Weirdly, the overlay when the text is selected is in the correct location.
#63217.blend

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-01 19:15, hash: `17c15798c3` Worked: (optional) **Short description of error** Curve Modifier skipped in Cycles **Exact steps for others to reproduce the error** 1. New empty scene 2. Add a Bezier circle and a text object. 3. Add Curve Modifier to text and set the object to the Bezier Circle 4. Viewport wireframe, solid and look all OK, viewport render and final render show the text in original location and not on the curve. Weirdly, the overlay when the text is selected is in the correct location. [#63217.blend](https://archive.blender.org/developer/F6907206/T63217.blend)
Author

Added subscriber: @PaulMcManus

Added subscriber: @PaulMcManus
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm.

Can confirm.
Member

apparently caused by 46eb5a0b8a

apparently caused by 46eb5a0b8a
Sergey Sharybin was assigned by Brecht Van Lommel 2019-04-02 14:40:26 +02:00

This issue was referenced by b1995e6451

This issue was referenced by b1995e645177fa7f5f5ef8d5c7596cd037dbcc30

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#63217
No description provided.