Fix T63217: Curve Modifier skipped in Cycles

Only mesh objects have all modifiers applied on the evaluated
object's data, other object types are to apply modifiers during
the conversion process.